refactor get all userBy tech team Endpoint TESTED advanced filters